# fin_manager_project

./: .env  .gitignore  Dockerfile  docker-compose.yml  mypy.ini  pyproject.toml  readme.md  start_script.py
core_app/: asgi.py  settings.py  urls.py  wsgi.py
export_app/: views.py
export_app/tests/: test_export_reports_view.py  test_export_transactions_view.py
reports_app/: models.py  serializers.py  views.py
reports_app/migrations/: 0001_initial.py
reports_app/service/: transaction_report_service.py  transaction_report_service_impl.py
reports_app/tests/: test_report_details_view.py  test_report_list_view.py  test_transaction_report_service.py
tests/: test_dummy.py  test_user_service.py
transactions_app/: models.py  serializers.py  views.py
transactions_app/migrations/: 0001_initial.py
transactions_app/service/: transaction_service.py  transaction_service_impl.py
transactions_app/tests/: test_transaction_details_view.py  test_transaction_list_view.py  test_transaction_service.py
users_app/: models.py  serializers.py  views.py
users_app/migrations/: 0001_initial.py
users_app/service/: user_service.py  user_service_impl.py
users_app/tests/: test_user_details_view.py  test_user_list_view.py  test_user_service.py
